--- a/ETL_Mini_Project_CMatthee.ipynb
+++ b/ETL_Mini_Project_CMatthee.ipynb
@@ -2841,6 +2841,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cf_id               int64\n",
+       "contact_id          int64\n",
+       "company_name       object\n",
+       "description        object\n",
+       "goal              float64\n",
+       "pledged           float64\n",
+       "outcome            object\n",
+       "backers_count       int64\n",
+       "country            object\n",
+       "currency           object\n",
+       "launch_date        object\n",
+       "end_date           object\n",
+       "category_id        object\n",
+       "subcategory_id     object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check datatypes one more time for schemas\n",
+    "campaign_cleaned.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 71,
    "metadata": {},
    "outputs": [],
